# JobFetch_bot

./: .env.example  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/bot/handlers/: common.py  help.py  sources.py  start.py
app/bot/keyboards/: builders.py
app/bot/menu/: set_main_menu.py
app/core/: config.py
app/locales/: i18n_manager.py
app/locales/ru/: strings.json  strings.yaml
